# PyJot

./: .gitignore  README.md  pyproject.toml
pyjot/: __init__.py  cli.py  config.py  database.py  pyjot.py
src/pyjot/: __init__.py  __main__.py  database.py
