[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjot-cli"
version = "0.1.0"
authors = [
    { name="Jero Pardo", email="jero.a.pardo@gmail.com" },
]
description = "A CLI To-Do application written in Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.16.1",
]

[project.scripts]
pyjot = "pyjot.__main__:main"